# deadbot

./: .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  deadbot.py  deadbot.spec  docker-compose-testing.yml  docker-compose.yml  main.sh  parser.sh  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: auto-deploy.yaml  ci.yaml  create-binary.yaml  data-repo-sync.yaml  deploy.yaml  docker-build.yaml  increment-version-dev.yaml  increment-version.yaml  pr-closed.yaml  pr-open.yaml  pr-sync.yaml  release.yaml  test-windows-build.yaml
analysis/wiki_activity/: analyze_activity.py  fetch_revisions.py  visualize.py
bot/: bot.py
data-fetcher/: .gitignore  README.md  decompile.sh  main.sh  parser.py  requirements.txt
data-fetcher/output/: hero-data.json  master-table.json
input-data/: README.md  changelog_configs.json  changelogs.json  depot_downloader_file_list.txt  steam_inf_path.txt  wiki_pages.json
input-data/changelogs/: changelog_configs.json
input-data/raw-changelogs/: 06-01-2024.txt  07-11-2024.txt  09-29-2024.txt  13369.txt  2024_05_24.txt  2024_06_20.txt  689.txt  herolab_2024_10_29.txt
output-data/: item-component-tree.txt  version.txt  versions.json
output-data/changelogs/: 05-03-2024.json  05-10-2024.json  05-13-2024.json  05-16-2024.json  05-19-2024.json  05-23-2024.json  05-24-2024.json  05-30-2024.json  06-01-2024.json  06-06-2024.json  06-07-2024.json  06-13-2024.json  06-14-2024.json  06-16-2024.json  06-20-2024.json  06-23-2024.json  06-27-2024.json  07-04-2024.json  07-11-2024.json  07-18-2024.json  07-23-2024.json  08-01-2024.json  08-06-2024.json  08-15-2024.json  08-16-2024.json  08-18-2024.json  08-22-2024.json  08-29-2024.json  08-29-24.json  changelog_configs.json  changelogs.json  historical_changelogs.json  tag_groups.json  tag_tree.json  version_configs.json
output-data/csv/: hero-data.csv  item-data.csv
output-data/json/: ability-data.json  ability_ui.json  attribute-data.json  attribute-localization-data.json  generic-data.json  hero-data.json  hero-meaningful-stats.json  hero-non-constants.json  item-data.json  soul-unlock-data.json  stat-box-attrs.json  versions.json  (+1 more)
scripts/: check_for_update.sh  increment_version.py
src/: _version.py  constants.py  csv-writer.py  deadbot.py
(+682 files in other folders)
